[gd_scene load_steps=2 format=3 uid="uid://bo3vqc8tmjovi"]

[ext_resource type="Script" uid="uid://kmno5yulh1pl" path="res://addons/turret_editor/turret_editor_panel.gd" id="1_script"]

[node name="TurretEditorPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelHeader" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Turret Editor"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BarrelSettings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SectionLabel" type="Label" parent="VBoxContainer/BarrelSettings"]
layout_mode = 2
text = "Barrel Settings"

[node name="BarrelCountContainer" type="HBoxContainer" parent="VBoxContainer/BarrelSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BarrelSettings/BarrelCountContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Barrel Count:"

[node name="BarrelCountSpinner" type="SpinBox" parent="VBoxContainer/BarrelSettings/BarrelCountContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 8.0
value = 1.0
rounded = true

[node name="BarrelSpacingContainer" type="HBoxContainer" parent="VBoxContainer/BarrelSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BarrelSettings/BarrelSpacingContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Barrel Spacing:"

[node name="BarrelSpacingSlider" type="HSlider" parent="VBoxContainer/BarrelSettings/BarrelSpacingContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.1
max_value = 2.0
step = 0.05
value = 0.5

[node name="BarrelSceneContainer" type="HBoxContainer" parent="VBoxContainer/BarrelSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BarrelSettings/BarrelSceneContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Barrel Scene:"

[node name="BarrelSceneSelector" type="FileDialog" parent="VBoxContainer/BarrelSettings"]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn, *.scn ; Scene Files")

[node name="BarrelSceneButton" type="Button" parent="VBoxContainer/BarrelSettings"]
layout_mode = 2
text = "Select Barrel Scene"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RotationLimits" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SectionLabel" type="Label" parent="VBoxContainer/RotationLimits"]
layout_mode = 2
text = "Rotation Limits"

[node name="EnabledContainer" type="HBoxContainer" parent="VBoxContainer/RotationLimits"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/RotationLimits/EnabledContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enable Rotation Limits:"

[node name="EnabledCheckBox" type="CheckBox" parent="VBoxContainer/RotationLimits/EnabledContainer"]
layout_mode = 2

[node name="MinAngleContainer" type="HBoxContainer" parent="VBoxContainer/RotationLimits"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/RotationLimits/MinAngleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Min Angle (degrees):"

[node name="MinAngleSpinBox" type="SpinBox" parent="VBoxContainer/RotationLimits/MinAngleContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 360.0
suffix = "°"

[node name="MaxAngleContainer" type="HBoxContainer" parent="VBoxContainer/RotationLimits"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/RotationLimits/MaxAngleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Angle (degrees):"

[node name="MaxAngleSpinBox" type="SpinBox" parent="VBoxContainer/RotationLimits/MaxAngleContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 360.0
value = 90.0
suffix = "°"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Apply Changes"

[node name="DebugContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DebugLabel" type="Label" parent="VBoxContainer/DebugContainer"]
layout_mode = 2
text = "Debug Info:"

[node name="DebugInfo" type="Label" parent="VBoxContainer/DebugContainer"]
layout_mode = 2
text = "(No debug info)"
autowrap_mode = 3
